<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_36sdp"
    android:background="@drawable/shape_top_corner_cut">

    <TextView
        android:id="@+id/mrNoTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Mr"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_margin="@dimen/_4sdp"
        android:fontFamily="@font/nunito"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dateAndTimeTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dateAndTimeTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_4sdp"
        android:fontFamily="@font/nunito"
        android:text="@string/date_and_time"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mrNoTextView"
        app:layout_constraintEnd_toStartOf="@id/usernameTextView"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_4sdp"
        android:fontFamily="@font/nunito"
        android:text="@string/username"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintStart_toEndOf="@+id/dateAndTimeTextView"
        app:layout_constraintEnd_toStartOf="@id/amountTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/amountTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_4sdp"
        android:fontFamily="@font/nunito"
        android:text="@string/amount_"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintStart_toEndOf="@id/usernameTextView"
        app:layout_constraintEnd_toStartOf="@id/paymentTextView"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/paymentTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_4sdp"
        android:fontFamily="@font/nunito"
        android:text="@string/payment"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/amountTextView"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>